# template_lab

./: .gitignore  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  template-matrix.yml
scaffolds/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-Apache-2.0.txt  LICENSE-BSD-3-Clause.txt
scripts/: bootstrap-repo-script.ps1  bootstrap.ps1  init-repo.ps1  new-project.ps1  preflight.ps1  setup-toolchain.ps1  test-template-contract.ps1
templates/: README.md  manifest.json
templates/cmd-batch-tool/: .gitattributes  README.md  tool.cmd
templates/db-api-service/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
templates/db-api-service/scripts/: dev.ps1  seed.py
templates/db-api-service/src/app/: __init__.py  main.py
templates/db-api-service/src/app/api/: routes.py
templates/db-api-service/tests/: test_health.py
templates/dockerized-service/: .gitignore  Dockerfile  README.md  docker-compose.yml
templates/flutter-app/: .gitignore  README.md  pubspec.yaml
templates/flutter-full-app/: README.md  pubspec.yaml
templates/fullstack-monorepo/: .gitattributes  README.md  package.json
templates/go-cli-tool/: README.md  go.mod
templates/go-module/: README.md  go.mod
templates/go-service/: .gitattributes  .gitignore  README.md
templates/go-worker/: README.md
templates/kotlin-android/: README.md  settings.gradle.kts
templates/python-fastapi-service/: README.md  pyproject.toml
templates/python-fastapi-service/tests/: test_health.py
(+107 files in other folders)
